changed ui css to uikit framework and changed design

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,31 +1,42 @@
 <!-- Always shows a header, even in smaller screens. -->
-<header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
-  <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-  </div>
-  <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-  </div>
-  <div class="mdl-layout--large-screen-only mdl-layout__header-row max-width">
-    <div class="header-box">
-      <div>
-        Hi, I am
+<header>
+  <div class="uk-container">
+    <div class="uk-grid">
+      <div class="header-box">
+        <div>
+          Hi, I am
+        </div>
+        <h3>{{title}}</h3>
+        <div class="typed-wrapper">
+          <span #typed></span>
+        </div>
+        <h6>#UNDER CONSTRUCTION</h6>
+        <div class="social-bar">
+          <a href="https://github.com/sadi304">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://www.npmjs.com/~sadimahmud">
+            <i class="fab fa-npm"></i>
+          </a>
+          <a href="mailto:sadisagar@gmail.com">
+            <i class="fa fa-at"></i>
+          </a>
+        </div>
       </div>
-      <h3>{{title}}</h3>
-      <div class="typed-wrapper">
-        <span #typed></span>
-      </div>
-      <h6>#UNDER CONSTRUCTION</h6>
     </div>
   </div>
-  <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-  </div>
-  <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-  </div>
-  <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
-    <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-      <a class="mdl-navigation__link" routerLinkActive="is-active" routerLink="/portfolio">Portfolio</a>
-      <a class="mdl-navigation__link" routerLinkActive="is-active" href="">Blog</a>
-      <a class="mdl-navigation__link" routerLinkActive="is-active" routerLink="/about">About</a>
-      <a class="mdl-navigation__link" routerLinkActive="is-active" href="">Contact</a>
-    </nav>
+  <div class="nav-holder">
+    <div class="uk-container">
+      <div class="uk-grid">
+        <nav class="uk-navbar">
+          <div class="uk-navbar--sadi">
+            <a class="nav-link" routerLinkActive="is-active" routerLink="/portfolio">Portfolio</a>
+            <a class="nav-link" routerLinkActive="is-active" routerLink="/blog">Blog</a>
+            <a class="nav-link" routerLinkActive="is-active" routerLink="/about">About</a>
+            <a class="nav-link" routerLinkActive="is-active" href="">Contact</a>
+          </div>
+        </nav>
+      </div>
+    </div>
   </div>
 </header>
