--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,21 +1,14 @@
-<div class="mdl-grid portfolio-max-width">
-  <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card" *ngFor='let item of portfolios'>
-    <div class="mdl-card__media">
-      <img class="article-image" src="https://images.unsplash.com/photo-1517816743773-6e0fd518b4a6?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=4a41b5c0a117d8755515651254366c7a&auto=format&fit=crop&w=1350&q=80"
-        border="0" alt="">
-    </div>
-    <div class="mdl-card__title">
-      <h2 class="mdl-card__title-text">{{item.title}}</h2>
-    </div>
-    <div class="mdl-card__supporting-text">
-      {{item.description}}
-    </div>
-    <div class="mdl-card__actions mdl-card--border">
-      <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="#" data-upgraded=",MaterialButton,MaterialRipple">Read more
-        <span class="mdl-button__ripple-container">
-          <span class="mdl-ripple"></span>
-        </span>
-      </a>
+<div class="uk-grid uk-grid-medium">
+  <div *ngFor="let item of portfolios" class="uk-width-1-3@m">
+    <div class="uk-card uk-card-default">
+      <div class="uk-card-media-top">
+        <img src="https://images.unsplash.com/photo-1517816743773-6e0fd518b4a6?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=4a41b5c0a117d8755515651254366c7a&auto=format&fit=crop&w=1350&q=80"
+          alt="">
+      </div>
+      <div class="uk-card-body">
+        <h3 class="uk-card-title">{{item.title}}</h3>
+        {{item.description}}
+      </div>
     </div>
   </div>
 </div>
