--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
-<main class="mdl-layout__content">
+<div class="uk-container">
   <router-outlet></router-outlet>
-</main>
+</div>
