--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,9 +1,63 @@
 h6 {
   position: absolute;
-  right: 10px;
+  right: 0;
   bottom: 10px;
+  color: #ccc;
+}
+header {
+  background: url("../../assets/banner.jpg");
+  background-position: bottom left;
+  background-attachment: fixed;
+  color: #fff;
+  margin-bottom: 40px;
+}
+
+h3 {
+  color: #fff;
+  margin: 20px 0;
+  font-size: 40px;
 }
 
 .header-box {
   position: relative;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  width: 100%;
+}
+.nav-holder {
+  background: rgba(0, 0, 0, 0.1);
+}
+.uk-navbar {
+  background: unset;
+  flex: 1;
+}
+
+.uk-navbar--sadi {
+  flex: 1;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-link {
+  text-align: center;
+  flex: 1;
+  color: #fff;
+  padding: 5px 0;
+  text-transform: uppercase;
+}
+
+.is-active {
+  border-bottom: 2px solid #fff;
+}
+.social-bar {
+  position: absolute;
+  right: 0;
+  top: 30px;
+}
+.social-bar svg {
+  font-size: 18px;
+  color: #ddd;
+}
+.social-bar a:not(:last-child) {
+  margin-right: 10px;
 }
