--- a/src/app/create-post-form/create-post-form.component.html
+++ b/src/app/create-post-form/create-post-form.component.html
@@ -1,15 +1,26 @@
 <form class="uk-form-stacked" (ngSubmit)="onSubmit(blogForm)" #blogForm="ngForm">
   <div class="uk-margin">
-    <label class="uk-form-label" for="form-stacked-text">Title of the post</label>
+    <label class="uk-form-label" for="form-stacked-text">
+      <h4>TITLE</h4>
+    </label>
     <div class="uk-form-controls">
-      <input class="uk-input" id="form-stacked-text" [(ngModel)]="name" name="name" type="text" placeholder="Some text...">
+      <input required class="uk-input" id="form-stacked-text" [(ngModel)]="title" name="title" type="text" placeholder="...">
     </div>
   </div>
-
   <div class="uk-margin">
-    <label class="uk-form-label" for="form-stacked-select">Post Body</label>
+    <label class="uk-form-label" for="form-stacked-text">
+      <h4>THUMBNAIL</h4>
+    </label>
     <div class="uk-form-controls">
-      <textarea [froalaEditor]='{height: 300}' [(ngModel)]="editorContent" name="editor"></textarea>
+      <input required class="uk-input" id="form-stacked-text" (change)="onFileChanged($event)" name="thumbnail" type="file" placeholder="...">
+    </div>
+  </div>
+  <div class="uk-margin">
+    <label class="uk-form-label" for="form-stacked-select">
+      <h4>BODY</h4>
+    </label>
+    <div class="uk-form-controls">
+      <textarea [froalaEditor]='options' [(ngModel)]="editorContent" name="body"></textarea>
     </div>
   </div>
   <div class="uk-margin">
