--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -2,4 +2,31 @@
   /* background: #eee;
   border: 1px solid #ccc;
   padding: 20px; */
+  margin-bottom: 40px;
+  border-top: 1px solid #eee;
+}
+
+.article {
+  padding: 20px 20px 20px 0;
+}
+
+.post-body {
+  font-size: 16px;
+}
+.thumbnail {
+  width: 500px;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  background-size: cover;
+  background-position: center;
+}
+
+.uk-label {
+  margin-top: 15px;
+  border-radius: 0;
+  background: #f2f2f2;
+  color: #333;
+  border: 1px solid #ccc;
+  padding: 5;
 }
